@@ -15,6 +15,8 @@ bridge-hostname: localhost
 ; max-rpms-payload-size: 10737418240
 # Nickname of the server's certificate in the NSS database specified below
 ; server-cert-nickname: sigul-server-cert
+# Maximum number of seconds to wait for signing one package
+; signing-timeout: 60
 
 [database]
 # Path to a SQLite database
